remove refs to asa-racing-api, remove cognito sns otp and use email otp

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asaRacing-core",
+  "name": "asa-racing-core",
   "version": "0.1.0",
   "bin": {
     "asaRacing-core": "bin/asaRacing-core.js"
